remove report from assigned report and add report from all report table UI, multilingual

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -306,7 +306,13 @@
     "reportsDefinition": "报告定义",
     "moduleName": "模块名称",
     "moduleDesc": "模块描述",
-    "subModule": "子模块"
+    "subModule": "子模块",
+    "allReports": "所有报告",
+    "reportName": "报告名称",
+    "reportDesc": "报告描述",
+    "assignedReport": "分配的报告",
+    "add": "添加",
+    "remove": "移除"
   },
   "entities": {
     "account_number": "帐号",
