--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -372,7 +372,13 @@
     "reportsDefinition": "Reports Definition",
     "moduleName": "Module name",
     "moduleDesc": "Module description",
-    "subModule": "Sub module"
+    "subModule": "Sub module",
+    "allReports": "All reports",
+    "reportName": "Report name",
+    "reportDesc": "Report description",
+    "assignedReport": "Assigned report",
+    "add": "Add",
+    "remove": "Remove"
   },
   "entities": {
     "account_number": "Account Number",
