ability to view quotation sources screen, add and delete quotation sources

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -239,7 +239,7 @@
     "Edit Quotation": "Edit Quotation",
     "Revise/Reuse Quotation" :"Revise/Reuse Quotation",
     "Convert Quotation": "Convert Quotation",
-    "Quotation Enquiry": "Quotation Enquiry",
+    "Quotation Inquiry": "Quotation Inquiry",
     "Quotation Sources": "Quotation Sources",
     "Quotation Numbers": "Quotation Numbers"
   },
