Display, create, and edit report submodules

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -312,7 +312,9 @@
     "reportDesc": "报告描述",
     "assignedReport": "分配的报告",
     "add": "添加",
-    "remove": "移除"
+    "remove": "移除",
+    "systems": "系统",
+    "module": "模块"
   },
   "entities": {
     "account_number": "帐号",
