--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -341,7 +341,9 @@
     "reportDesc": "Descripción del informe",
     "assignedReport": "Informe asignado",
     "add": "Agregar",
-    "remove": "Eliminar"
+    "remove": "Eliminar",
+    "systems": "Sistemas",
+    "module": "Módulo"
   },
   "entities": {
     "account_number": "Número de cuenta",
