VQ-3721:Ability to view Revised Quotation Summary (Product Section) and QUOTE MODULE CLEANUP

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -979,19 +979,19 @@
       "total_sum_insured":"Total sum insured",
       "total_taxes":"Total taxes",
       "excesses": "Excesses",
-      "convert_quote":"Convert Quote",
-      "confirm_conversion": "Confirm Conversion",
+      "convert_quote":"Convert quote",
+      "confirm_conversion": "Confirm conversion",
       "conversion_message":"You are about to convert a quick quote to a normal quote",
       "convert_to_normal_quote": "Convert to normal quote",
-      "convert_to_policy":"Convert to Policy",
-      "search_results": "Search Results",
-      "quotation_conversion": "Quotation Conversion",
-      "search_criteria": "Search Criteria",
-      "quotation_number": "Quotation Number",
+      "convert_to_policy":"Convert to policy",
+      "search_results": "Search results",
+      "quotation_conversion": "Quotation conversion",
+      "search_criteria": "Search criteria",
+      "quotation_number": "Quotation number",
       "agent" : "Agent",
       "status": "Status",
       "no_data" : "No Data To Display",
-      "quotation_products" : "Quotation Products",
+      "quotation_products" : "Quotation products",
       "merge_to_policy" : "Merge to policy",
       "start_date" : "Start date",
       "end_date" : "End date",
