--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -934,7 +934,10 @@
       "applicable_modules": "Moduli zinazotumika",
       "underwriting": "Uandikaji wa bima",
       "both": "Vyote viwili",
-      "quotations": "Nukuu"
+      "quotations": "Nukuu",
+      "select_a_policy": "Chagua sera",
+      "policy_ID": "Kitambulisho cha sera",
+      "no_policy_found": "Hakuna sera iliyopatikana"
 
     },
     "policy": {
