--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2687,14 +2687,15 @@
     "reject": "Reject",
 
     "receipting": {
-      "capture_receipt": "Capture receipt",
+      "capture_receipt": "Receipt Capture",
+      "Allocate_Receipt":"Allocate Receipt",
       "receipt_details": "Receipt Details",
       "currency": "Currency",
       "payment_mode": "Payment Mode",
       "bank_account": "Bank Account",
       "receipting_point": "Receipting Point",
       "receipt_number": "Receipt Number",
-      "amount_issued": "Amount Issued",
+      "amount_issued": "Receipt amount",
       "cheque_type": "Cheque Type",
       "ipf_financier": "IPF Financier",
       "gross_receipt_amount": "Gross Receipt Amount",
@@ -2703,7 +2704,7 @@
       "receipt_date": "Receipt Date",
       "narration": "Narration",
       "payment_ref": "Payment Ref",
-      "other_ref": "Other Ref",
+      "other_ref": "Other References",
       "document_date": "Document Date",
       "manual_ref": "Manual Ref",
       "save_receipt": "Save Receipt",
@@ -2716,10 +2717,10 @@
       "spoilt_receipt_paper": "Spoilt Receipt Paper",
       "not_printed": "Not Printed",
       "uploadFiles": "Upload file",
-      "charges": "Charges",
+      "charges": "Receipt charges",
       "capitalInjection": "Capital Injection",
       "deductions": "Deductions",
-      "chargeAmount": "Charge Amount"
+      "chargeAmount": "Charge amount"
     },
     "allocation": {
       "allocate_funds": "Allocate Funds",
