--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -825,6 +825,7 @@
       "car_reg_no": "Car reg no",
       "source_is_required": "Source is required",
       "product_is_required": "Product is required",
+      "invalid_email_address": "Invalid email address",
       "invalid_phone_format": "Please provide a valid phone number.",
       "invalid_email_format": "Please provide a valid Email Address.",
       "branch_is_required": "Branch is required",
