--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -771,7 +771,8 @@
     "potential_sale_stage_required": "Potential Sale Stage is Required",
     "potential_contr": "Potential Contr",
     "potential_contr_required": "Potential Contr is Required",
-    "converted": "converted",
+    "converted": "Converted",
+    "is_lead_converted": "Is the lead already converted",
     "converted_required": "Converted is Required",
     "potential_close_date": "Potential Close Date",
     "potential_close_date_required": "Potential Close Date is Required",
