--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -706,7 +706,8 @@
     "potential_sale_stage_required": "Hatua ya Uuzaji Inayowezekana Inahitajika",
     "potential_contr": "Mkataba Unaowezekana",
     "potential_contr_required": "Mkataba Unaowezekana Unahitajika",
-    "converted": "imebadilishwa",
+    "converted": "Imebadilishwa",
+    "is_lead_converted": "Je, mteja anaongoza tayari amebadilishwa?",
     "converted_required": "Mabadiliko Yanahitajika",
     "potential_close_date": "Tarehe ya Kuuza Inayowezekana",
     "potential_close_date_required": "Tarehe ya Kuuza Inayowezekana Inahitajika",
