--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2742,6 +2742,26 @@
       "yes":"Yes",
       "no":"No",
       "editDescription":"edit Description",
+      "accountType":"Account type",
+      "searchCriteria":"Search Criteria",
+      "search":"Search",
+      "description":"Description",
+      "name":"Name",
+      "type":"Type",
+      "actions":"Actions",
+      "select":"Select",
+      "showing":"Showing",
+      "to":"to",
+      "of":"of",
+      "entries":"entries",
+      "finance":"Finance",
+      "receiptCapture":"Receipt Capture",
+      "allocateReceipt":"Allocate Receipt",
+      "accountSelection":"Account Selection",
+      "byPolicyNumber":"By Policy Number",
+      "byAccountNumber":"By Account Number",
+      "byDebitNote":"By Debit Note",
+      "byClientName":"By Client Name",
       "chargeAmount": "Charge amount"
     },
     "allocation": {
