--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -794,7 +794,7 @@
     "convert_to_client": "Convert To Client",
     "contact_address_details": "Contact and Address Details",
     "certRegistrationNumber": "Certificate Registration Number",
-    "registrationName": "Registration Number",
+    "registrationName": "Registration Name",
     "tradeName": "Trade Name",
     "registrationDate": "Registration Date",
     "parentCompany": "Parent Company",
