added multilingual features

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -2029,6 +2029,7 @@
     }
   },
   "fms": {
+ 
     "org": "组织",
     "branch": "分支机构",
     "yr": "年份",
@@ -2058,7 +2059,28 @@
     "correction": "发送以更正",
     "reject": "拒绝",
     "receipting": {
+      "receipting":"收据处理",
+      "cbReceipting":"现金簿收据处理",
       "capture_receipt": "捕获收据",
+   
+      "currency": "货币",
+      "payment_mode": "支付方式",
+      "bank_account": "银行账户",
+      "receipting_point": "收据点",
+      "receipt_number": "收据编号r",
+      "amount_issued": "发放金额",
+      "cheque_type": "支票类型",
+      "gross_receipt_amount": "收据总金额",
+      "received_from": "收到来自",
+      "drawers_bank": "出票人银行",
+      "receipt_date": "收据日期",
+      "narration": "说明",
+      "payment_ref": "支付参考",
+      "other_ref": "其他参考",
+      "charges": "收据费用",
+      "document_date": "文件日期",
+      "manual_ref": "手动参考",
+
       "saveReceipt": "保存收据",
       "printReceipt": "打印收据",
       "cancel": "取消",
@@ -2076,7 +2098,58 @@
       "yes":"是",
       "no":"不是 ",
       "editDescription":"编辑描述",
-      "uploadFiles": "上传文件"
+      "uploadFiles": "上传文件",
+      "accountType":"账户选择",
+      "searchCriteria":"搜索条件",
+      "search":"搜索",
+      "receiptSummary":"收据摘要",
+      "isReceiptPrinted?":"收据是否已打印",
+       
+      "receiptAmount": "收据金额",
+      "receiptAllocations":"收据分配",
+      "enterAmount":"输入金额",
+      "save&print": "保存并打印",
+      "generateAcknowledgement":"生成确认单",
+      "save":"保存",
+      "descriptionIsRequired":"描述是必需的",
+      "enterFileDescription":"输入文件描述",
+      "fileDescription":"文件描述",
+      "open":"打开",
+      "filename":"文件名",
+      "policyNumber":"保单号",
+      "transactionNumber":"交易编号",
+      "batchNumber":"Batch Number",
+      "allocatedAmount":"分配金额",
+      "commissionAmount":"佣金额",
+     "includeCommission":"包含佣金",
+      "postFile":"发布文件",
+      "allocations":"分配",
+      "saveAllocation":"保存分配",
+      "comm?":"佣金？",
+      "filter":"过滤",
+      "commission":"佣金",
+     "balance":"B余额",
+     "amount":"金额",
+     "unallocatedAmount":"未分配金额",
+      "client_name": "客户姓名",
+
+      "name":"名称",
+      "type":"类型",
+      "actions":"操作",
+      "select":"选择",
+      "showing":"显示",
+      "to":"到",
+      "of":"的",
+      "entries":"条目",
+      "finance":"财务",
+      "receiptCapture":"收据捕获",
+      "allocateReceipt":"分配收据",
+      "accountSelection":"账户选择",
+      "byPolicyNumber":"按保单号",
+      "byAccountNumber":"按账号",
+      "byDebitNote":"按借项通知单",
+      "byClientName":"按客户姓名",
+      "EnterSearchTerm":"输入搜索词"
 
     },
     "allocation": {
