--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2061,6 +2061,8 @@
     "correction": "Zur Korrektur senden",
     "reject": "Ablehnen",
     "receipting": {
+      "receipting":"Belegerstellung",
+      "cbReceipting":"Kassenbuch-Belegerstellung",
       "capture_receipt": "Quittung erfassen",
       "receipt_details": "Empfangsdetails",
       "currency": "Währung",
@@ -2091,6 +2093,35 @@
       "saveReceipt": "Quittung speichern",
       "printReceipt": "Quittung drucken",
       "cancel": "Abbrechen",
+
+      "receiptAmount": "Belegbetrag",
+      "receiptAllocations":"Belegzuweisungen",
+      "enterAmount":"Betrag eingeben",
+      "save&print": "Speichern und drucken",
+      "generateAcknowledgement":"Bestätigungsschein erzeugen",
+      "save":"Speichern",
+      "descriptionIsRequired":"Beschreibung erforderlich",
+      "enterFileDescription":"Dateibeschreibung eingeben",
+      "fileDescription":"Dateibeschreibung",
+      "open":"Öffnen",
+      "filename":"Dateiname",
+      "policyNumber":"Policennummer",
+      "transactionNumber":"Transaktionsnummer",
+      "batchNumber":"Batch Number",
+      "allocatedAmount":"Zugewiesener Betrag",
+      "commissionAmount":"Provisionsbetrag",
+     "includeCommission":"Provision einbeziehen",
+      "postFile":"Datei posten",
+      "allocations":"Zuweisungen",
+      "saveAllocation":"Zuweisung speichern",
+      "comm?":"Provision?",
+      "filter":"Filter",
+      "commission":"Provision",
+     "balance":"Saldo",
+     "amount":"Betrag",
+     "unallocatedAmount":"Nicht zugewiesener Betrag",
+      "client_name": "Kundenname",
+
       "captureReceipt": "Quittung erfassen",
       "charges": "Gebühren",
       "capitalInjection": "Kapitalzufuhr",
@@ -2105,7 +2136,29 @@
       "yes":"Ja",
       "no":"Nein",
       "editDescription":"Beschreibung bearbeiten",
-      "uploadFiles": "Dateien hochladen"
+      "uploadFiles": "Dateien hochladen",
+      "accountType":"Kontotyp",
+      "searchCriteria":"Suchkriterien",
+      "search":"Suchen",
+     "receiptSummary":"Belegübersicht",
+   "isReceiptPrinted?":"Ist der Beleg gedruckt?",
+      "name":"Name",
+      "type":"Typ",
+      "actions":"Aktionen",
+      "select":"Auswählen",
+      "showing":"Anzeigen",
+      "to":"Zu",
+      "of":"Von",
+      "entries":"Einträge",
+      "finance":"Finanzen",
+      "receiptCapture":"Belegerfassung",
+      "allocateReceipt":"Beleg zuweisen",
+      "accountSelection":"Kontoauswahl",
+      "byPolicyNumber":"Nach Policennumme",
+      "byAccountNumber":"Nach Kontonummer",
+      "byDebitNote":"Nach Lastschriftanzeige",
+      "byClientName":"Nach Kundennam",
+      "EnterSearchTerm":"Suchbegriff eingeben"
 
     },
     "allocation": {
