--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2599,6 +2599,8 @@
     "correction": "Enviar para corrección",
     "reject": "Rechazar",
     "receipting": {
+      "receipting":"Emisión de recibos",
+      "cbReceipting":"Libro de caja-Emisión de recibos",
       "receipt_details": "Detalles del Recibo",
       "capture_receipt": "Capturar Recibo",
       "currency": "Moneda",
@@ -2639,7 +2641,60 @@
       "yes":"Sí",
       "no":"No",
       "editDescription":"Editar descripción",
-      "uploadFiles": "Cargar Archivos"
+      "uploadFiles": "Cargar Archivos",
+      "accountType":"Tipo de cuenta",
+      "searchCriteria":"Criterios de búsqueda",
+      "search":"Buscar",
+ 
+       
+      "receiptAmount": "Importe del recibo",
+      "receiptAllocations":"Asignaciones de recibos",
+      "enterAmount":"Introducir importe",
+      "save&print": "Guardar e imprimir",
+      "generateAcknowledgement":"Generar resguardo de acuse",
+      "save":"Guardar",
+      "descriptionIsRequired":"La descripción es obligatoria",
+      "enterFileDescription":"Introducir descripción del archivo",
+      "fileDescription":"Descripción del archivo",
+      "open":"Abrir",
+      "filename":"Nombre del archivo",
+      "policyNumber":"Número de póliza",
+      "transactionNumber":"Número de transacción",
+      "batchNumber":"Batch Number",
+      "receiptSummary":"Resumen del recibo",
+   "isReceiptPrinted?":"¿Está el recibo impreso?",
+      "allocatedAmount":"Importe asignado",
+      "commissionAmount":"Importe de la comisión",
+     "includeCommission":"Incluir comisión",
+      "postFile":"Publicar archivo",
+      "allocations":"Asignaciones",
+      "saveAllocation":"Guardar asignación",
+      "comm?":"¿Comisión?",
+      "filter":"Filtro",
+      "commission":"Comisión",
+     "balance":"Saldo",
+     "amount":"Importe",
+     "unallocatedAmount":"Importe no asignado",
+      "client_name":"Nombre del cliente",
+
+
+      "name":"Nombre",
+      "type":"Tipo",
+      "actions":"Acciones",
+      "select":"Seleccionar",
+      "showing":"Mostrando",
+      "to":"A",
+      "of":"De",
+      "entries":"Entradas",
+      "finance":"Finanzas",
+      "receiptCapture":"Captura de recibo",
+      "allocateReceipt":"Asignar recibo",
+      "accountSelection":"Selección de cuenta",
+      "byPolicyNumber":"Por número de póliza",
+      "byAccountNumber":"Por número de cuenta",
+      "byDebitNote":"Por nota de débito",
+      "byClientName":"Por nombre del cliente",
+      "EnterSearchTerm":"Introducir término de búsqueda"
     },
 
     "allocation": {
