--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2598,6 +2598,8 @@
     "correction": "Envoyer pour correction",
     "reject": "Rejeter",
     "receipting": {
+      "receipting":"Emission de reçus",
+      "cbReceipting":"Livre de caisse-Emission de reçus",
       "receipt_details": "Détails du Reçu",
       "capture_receipt": "Capturer le reçu",
       "currency": "Devise",
@@ -2638,7 +2640,59 @@
       "yes":"Oui",
       "no":"Non",
       "editDescription":"Modifier la description",
-      "uploadFiles": "Télécharger des fichiers"
+      "uploadFiles": "Télécharger des fichiers",
+      "accountType":"Type de compte",
+      "searchCriteria":"Critères de recherche",
+      "search":"Rechercher",
+    
+      "receiptAmount": "Montant du reçu",
+      "receiptAllocations":"Allocations de reçus",
+      "enterAmount":"Saisir le montant",
+      "save&print": "Enregistrer et imprimer",
+      "generateAcknowledgement":"Générer un accusé de réception",
+      "save":"Enregistrer",
+      "descriptionIsRequired":"La description est requise",
+      "enterFileDescription":"Saisir la description du fichier",
+      "fileDescription":"Description du fichier",
+      "open":"Ouvrir",
+      "filename":"Nom du fichier",
+      "policyNumber":"Numéro de police",
+      "transactionNumber":"Numéro de transaction",
+      "batchNumber":"Batch Number",
+      "allocatedAmount":"Montant alloué",
+      "commissionAmount":"Montant de la commission",
+     "includeCommission":"Inclure la commission",
+      "postFile":"Publier le fichier",
+      "allocations":"Allocations",
+      "saveAllocation":"Enregistrer l’allocation",
+      "comm?":"Commission?",
+      "filter":"Filtre",
+      "commission":"Commission",
+     "balance":"Solde",
+     "amount":"Montant",
+     "receiptSummary":"Résumé du reçu",
+   "isReceiptPrinted?":"Le reçu est-il imprimé ?",
+     "unallocatedAmount":"Montant non alloué",
+      "client_name": "Nom du client",
+
+      "name":"Nom",
+      "type":"Type",
+      "actions":"Actions",
+      "select":"Sélectionner",
+      "showing":"Affichage",
+      "to":"À",
+      "of":"De",
+      "entries":"Entrées",
+      "finance":"Finance",
+      "receiptCapture":"Belegerfassung",
+      "allocateReceipt":"Attribuer le reçu",
+      "accountSelection":"Sélection de compt",
+      "byPolicyNumber":"Par numéro de police",
+      "byAccountNumber":"Par numéro de compte",
+      "byDebitNote":"Par note de débi",
+      "byClientName":"Par nom du client",
+      "EnterSearchTerm":"Saisir le terme de recherche"
+
     },
     "allocation": {
       "allocate_funds": "Allouer des Fonds",
