--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -2065,6 +2065,8 @@
     "correction": "Tuma kwa marekebisho",
     "reject": "Kataa",
     "receipting": {
+      "receipting":"Utoaji wa risiti",
+      "cbReceipting":"Kitabu cha fedha-Utoaji wa risiti",
       "capture_receipt": "Shika Risiti",
       "receipt_details": "Maelezo ya Risiti",
       "currency": "Fedha",
@@ -2105,7 +2107,59 @@
     "yes":"Ndio",
     "no":"Hapana",
     "editDescription":"Hariri Maelezo",
-    "uploadFiles": "Pakia Faili"
+    "uploadFiles": "Pakia Faili",
+    "accountType":"Aina ya akaunti",
+    "searchCriteria":"Vigezo vya utafutaji",
+    "search":"Tafuta",
+   
+     
+    "receiptAmount": "Kiasi cha risiti",
+    "receiptAllocations":"Mgao wa risiti",
+    "enterAmount":"Ingiza kiasi",
+    "save&print": "Hifadhi na kuchapisha",
+    "generateAcknowledgement":"Tengeneza risiti ya uthibitisho",
+    "save":"Hifadhi",
+    "descriptionIsRequired":"Maelezo yanahitajika",
+    "enterFileDescription":"Ingiza maelezo ya faili",
+    "fileDescription":"Maelezo ya faili",
+    "open":"Fungua",
+    "filename":"Jina la faili",
+    "policyNumber":"Nambari ya sera",
+    "transactionNumber":"Nambari ya muamala",
+    "batchNumber":"Batch Number",
+    "allocatedAmount":"Kiasi kilichotengwa",
+    "commissionAmount":"Kiasi cha tume",
+   "includeCommission":"Jumlisha tume",
+   "receiptSummary":"Muhtasari wa risiti",
+   "isReceiptPrinted?":"Je, risiti imeshachapishwa?",
+    "postFile":"Chapisha faili",
+    "allocations":"Mgao",
+    "saveAllocation":"Hifadhi mgao",
+    "comm?":"Tume?",
+    "filter":"Chuja",
+    "commission":"Tume",
+   "balance":"Salio",
+   "amount":"Kiasi",
+   "unallocatedAmount":"Kiasi kisichotengwa",
+    "client_name": "Jina la mteja",
+
+    "name":"Jina",
+    "type":"Aina",
+    "actions":"Vitendo",
+    "select":"Chagua",
+    "showing":"Inaonyesha",
+    "to":"Kwa",
+    "of":"Ya",
+    "entries":"Ingizo",
+    "finance":"Fedha",
+    "receiptCapture":"Uwekaji kumbukumbu wa risit",
+    "allocateReceipt":"Tambaza risiti",
+    "accountSelection":"Uchaguzi wa akaunti",
+    "byPolicyNumber":"Kwa nambari ya sera",
+    "byAccountNumber":"Kwa nambari ya akaunti",
+    "byDebitNote":"Kwa noti ya deni",
+    "byClientName":"Kwa jina la mteja",
+    "EnterSearchTerm":"Ingiza neno la utafutaji"
     },
     "allocation": {
       "allocate_funds": "Tenganisha Fedha",
