--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2516,7 +2516,7 @@
       "authorizedDate": "Authorized date",
       "receiptNo": "Receipt no",
       "receiptDate": "Receipt date",
-      "receiptAmount": "Receipt amount",
+      
       "receiptBalance": "Receipt balance",
       "receiptSettlement": "Receipt settlement",
       "debitCredit": "Debit/credit",
@@ -2697,17 +2697,15 @@
     "reject": "Reject",
 
     "receipting": {
+      "receipting":"Receipting",
+      "cbReceipting":"CB-Receipting",
       "capture_receipt": "Receipt Capture",
-      "Allocate_Receipt":"Allocate Receipt",
-      "capture_receipt": "Receipt Capture",
-      "Allocate_Receipt":"Allocate Receipt",
       "receipt_details": "Receipt Details",
       "currency": "Currency",
       "payment_mode": "Payment Mode",
       "bank_account": "Bank Account",
       "receipting_point": "Receipting Point",
       "receipt_number": "Receipt Number",
-      "amount_issued": "Receipt amount",
       "amount_issued": "Receipt amount",
       "cheque_type": "Cheque Type",
       "ipf_financier": "IPF Financier",
@@ -2718,11 +2716,30 @@
       "narration": "Narration",
       "payment_ref": "Payment Ref",
       "other_ref": "Other References",
-      "other_ref": "Other References",
+      "charges": "Receipt charges",
       "document_date": "Document Date",
+      "receiptAmount": "Receipt amount",
+      "receiptAllocations":"Receipt Allocations",
+      "receiptSummary":"Receipt Summary",
+      "isReceiptPrinted?":"is Receipt Printed?",
+      "enterAmount":"Enter amount",
       "manual_ref": "Manual Ref",
       "save_receipt": "Save Receipt",
-      "print_receipt": "Print Receipt",
+      "save&print": "Save And Print",
+      "generateAcknowledgement":"Print Acknowledgement slip",
+      "save":"Save",
+      "eescriptionIsRequired":"Description is required",
+      "enterFileDescription":"Enter File Description",
+      "fileDescription":"File Description",
+      "open":"Open",
+      "filename":"Filename",
+      "policyNumber":"Policy Number",
+      "transactionNumber":"Transaction Number",
+      "batchNumber":"Batch Number",
+      "allocatedAmount":"Allocated Amount",
+      "commissionAmount":"Commission Amount",
+     "includeCommission":"Include Commission",
+      "postFile":"post File",
       "cancel_receipt": "Cancel Receipt",
       "search_transactions": "Search Transactions",
       "print_confirmation": "Print Confirmation",
@@ -2731,8 +2748,8 @@
       "spoilt_receipt_paper": "Spoilt Receipt Paper",
       "not_printed": "Not Printed",
       "uploadFiles": "Upload file",
-      "charges": "Receipt charges",
-      "charges": "Receipt charges",
+     
+      
       "capitalInjection": "Capital Injection",
       "deductions": "Deductions",
       "back":"Back",
@@ -2764,7 +2781,20 @@
       "byAccountNumber":"By Account Number",
       "byDebitNote":"By Debit Note",
       "byClientName":"By Client Name",
-      "chargeAmount": "Charge amount"
+      "EnterSearchTerm":"Enter search term",
+      "chargeAmount": "Charge amount",
+      "allocations":"Allocations",
+      "saveAllocation":"Save Allocation",
+      "comm?":"Comm?",
+      "filter":"Filter",
+      "commission":"Commission",
+     "balance":"Balance",
+     "amount":"Amount",
+     "unallocatedAmount":"Unallocated Amount",
+      "client_name": "Client Name",
+      
+      "allocated_amount": "Allocated Amount"
+     
     },
     "allocation": {
       "allocate_funds": "Allocate Funds",
@@ -2772,9 +2802,7 @@
       "policies": "Policies",
       "group_business_accounts": "Group Business Accounts",
       "gl_accounts": "GL Accounts",
-      "client_name": "Client Name",
-      "amount": "Amount",
-      "allocated_amount": "Allocated Amount",
+      
       "policy_number": "Policy Number",
       "account_number": "Account Number",
       "code": "Code",
