VQ-3270: Ability to Search a Quote by Client, or Quotation Number; VQ-3301: Ability to Filter Quotes by Status(Quotation Inquiry Screen)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -533,7 +533,7 @@
     "new_policy": "New Policy",
     "new_quote": "New Quote",
     "new_service_provider": "New Service Provider",
-    "next": "next",
+    "next": "Next",
     "next_of_kins": "Next of Kins",
     "no": "No",
     "no_agent_found": "No Agent Found",
